clang/test/BSC/Negative/Ownership/RuleCheck/Maple/if_return_leak/if_return_leak.cbs
// RUN: %clang_cc1 -verify %s

struct A {
    int a;
};

void eat(struct A * owned a) {
    struct A b = (struct A)*a;
} // expected-error {{memory leak of value: `a`}}

void f() {
    struct A a = { .a = 0 };
    if (a.a) {
        struct A * owned b = (struct A * owned)&a;
        if (a.a) {
            return; // expected-error {{memory leak of value: `b`}}
        }
        eat(b);
    }
}

int main() { return 0; }